@@ -77,11 +77,10 @@ class FinalizePrivateFieldsTest implements RewriteTest {
               }
               """,
                 spec -> spec.afterRecipe(cu -> {
-                    J.VariableDeclarations declarations = (J.VariableDeclarations) cu.getClasses().get(
-                            0).getBody().getStatements().get(0);
+                    J.VariableDeclarations declarations = (J.VariableDeclarations) cu.getClasses().getFirst().getBody().getStatements().getFirst();
                     assertThat(declarations.getModifiers()).anySatisfy(
                             m -> assertThat(m.getType()).isEqualTo(J.Modifier.Type.Final));
-                    assertThat(declarations.getVariables().get(0).getVariableType().getFlags()).contains(Flag.Final);
+                    assertThat(declarations.getVariables().getFirst().getVariableType().getFlags()).contains(Flag.Final);
                 })));
     }
 
